--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -1,10 +1,12 @@
-.intro {
+.intro_body {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     border-right: 24px;
     border-left: 24px;
     border-top: 21px;
     border-bottom: 21px;
-    align-items: center;
     height: 650px;
     background-size: cover;
     background-position: center;
@@ -12,22 +14,37 @@
     border-right: 24px;
     border-left: 24px;
 }
-
 .titlecontact {
 
 }
+.introandcontact {
+    /* margin-top: 120px; */
+    align-items: center;
+    text-align: center;
+    max-width: 800px; /* Optional: limit the width */
+    width: 100%; /* Make sure it doesn't overflow */
+}
 .name {
+    text-align: center;
     font-size: 56px;
     color: white;
     font-family: "Readex Pro", sans-serif;
 }
 
 .school {
+    text-align: center;
     font-size: 24px;
     color: white;
     font-family: "Readex Pro", sans-serif;
 }
+.contact_buttons {
+    display: flex;
+    justify-content: center; /* Center aligns horizontally */
+    gap: 10px;
+    text-align:center;
+  }
 .contactusbutton {
+    /* align-items: center; */
     font-size: 16px;
     background-color: transparent;
     border-style: solid;
@@ -41,6 +58,7 @@
     margin-right: 10px;
 }
 .joinusbutton {
+    /* align-items: center; */
     font-size: 16px;
     color: black;
     background-color: white;
@@ -52,4 +70,10 @@
     padding-bottom: 14px;
     padding-left: 24px;
     padding-right: 24px;
+}
+
+/* mission */
+.mission_title, .mission_desc {
+    color: black;
+    font-family: "Readex Pro", sans-serif;
 }
