--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -73,13 +73,16 @@
 }
 
 /* mission */
+.misson_body {
+    margin-top: 60px;
+}
 .mission_title, .mission_desc {
     color: black;
     font-family: "Readex Pro", sans-serif;
 }
 .mission_title {
     font-size: 50px;
-    font-weight: bolder;
+    font-weight: 800;
     font-style: normal;
     display: block;
     box-sizing: border-box;
@@ -89,32 +92,32 @@
 .mission_desc{
     box-sizing: border-box;
     display: block;
-    font-size: 16px;
+    font-size: 19px;
     font-weight: normal;
     margin-right: 48px;
     text-align: left;
     overflow-wrap: break-word;
-    word-break: break-word;
+    /* word-break: break-word; */
+    font-weight: 540;
+    letter-spacing: 0.5px;
+    line-height: 27px;
+    max-width: 550px;
 }
 .mission_photo_div{
-    /* box-sizing: border-box;
-    display: block;
-    flex-basis: 100%;
-    flex-grow: 1; */
-
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.mission1 {
-    height: 300px;
-    /* width: 100%; */
-    margin-bottom: 10px;
+.mission1_div, .mission2_div {
+    width: 500px;
+    object-fit: cover;
 }
-.mission2 {
-    height: 300px;
+.mission1, .mission2 {
+    border-radius: 20px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 .misson_body {
     padding-top: 48px;
@@ -124,17 +127,10 @@
     width: 100%;
 }
 .mission_group {
-    /* display: flex; */
-    /* align-items: normal; */
-    /* flex-wrap: wrap;
-    max-width: 960px;
-    row-gap: 32px;
-    box-sizing: border-box; */
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 80%; /* Adjust the width as needed */
-    max-width: 1200px; /* Adjust the max-width as needed */
+    width: 80%;
+    max-width: 1200px;
 }
