--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -30,7 +30,6 @@
     color: white;
     font-family: "Readex Pro", sans-serif;
 }
-
 .school {
     text-align: center;
     font-size: 24px;
@@ -94,13 +93,13 @@
     display: block;
     font-size: 19px;
     font-weight: normal;
-    margin-right: 48px;
+    margin-right: 10px;
     text-align: left;
     overflow-wrap: break-word;
     /* word-break: break-word; */
     font-weight: 540;
     letter-spacing: 0.5px;
-    line-height: 27px;
+    line-height: 28px;
     max-width: 550px;
 }
 .mission_photo_div{
@@ -133,4 +132,68 @@
     align-items: center;
     width: 80%;
     max-width: 1200px;
+}
+
+/* Past Present Body */
+.past_present_projects_body {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.project_group {
+    max-width: 1200px;
+    display: flex;
+    /* align-items: center; */
+    flex-direction: column;
+    /* margin: 0 auto; */
+}
+.pastpresent_title {
+    font-size: 50px;
+    color: black;
+    font-family: "Readex Pro", sans-serif;
+    font-weight: 800;
+}
+/* image divs for projects below */
+.project_slide {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    z-index: 0;
+    
+}
+.prosthetic_leg, .medication_manager, .exoskeleton {
+    width: 300px;
+    object-fit: contain;
+    height: 550px;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+    margin-right: 30px;
+    border-radius: 20px;
+}
+.project_name, .proj_desc {
+    color: white;
+    font-family: "Readex Pro", sans-serif;
+    z-index: 2;
+    position: relative;
+    background-image: linear-gradient(to bottom, rgb(0,0,0,0), rgb (0,0,0,1));
+    padding-left: 10px; padding-right: 10px; padding-bottom: 10px;
+}
+.project_name {
+    font-size: 25px;
+    font-weight: 700;
+}
+.proj_desc {
+    font-size: 18px;
+    line-height: 28px;
+}
+.gradient {
+  border-width: 10px;
+  border-style: solid;
+  border-image-slice: fill 1;
+  border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1) 100%);
+  z-index: 1;
 }
