--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -162,7 +162,7 @@
     
 }
 .prosthetic_leg, .medication_manager, .exoskeleton {
-    width: 300px;
+    width: 100%;
     object-fit: contain;
     height: 550px;
     background-position: center;
@@ -196,4 +196,43 @@
   border-image-slice: fill 1;
   border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1) 100%);
   z-index: 1;
+}
+
+/* outreach styles */
+.outreach_body {
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+.outreach_group {
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+}
+.outreach_titles {
+    color: black;
+    font-family: "Readex Pro", sans-serif;
+}
+.outreach_titles > h2 {
+    font-size: 25px;
+}
+.outreach_titles > h1 {
+    font-size: 50px;
+}
+.outreach_titles > p {
+    font-size: 18px;
+    line-height: 30px;
+    /* word-wrap: break-word; */
+    max-width: 1200px;
+}
+.outreach_images {
+    justify-content: center;
+    display: flex;
+    gap: 20px;
+}
+.outreach_images > img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 20px;
 }
