--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -134,11 +134,14 @@
     max-width: 1200px;
 }
 
-/* Past Present Body */
+/* Past Present Body Styles */
 .past_present_projects_body {
+    position: relative;
     display: flex;
     justify-content: center;
     width: 100%;
+    background-color:rgb(245, 234, 193);
+    z-index: 1;
 }
 .project_group {
     max-width: 1200px;
@@ -196,6 +199,24 @@
   border-image-slice: fill 1;
   border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1) 100%);
   z-index: 1;
+}
+.wave {
+    position: absolute;
+    bottom: 200;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    z-index: 2;
+}
+.wave svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 67px;
+}
+.wave .shape-fill {
+    fill: rgba(84, 75, 72, 0);
 }
 
 /* outreach styles */
