--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -141,14 +141,15 @@
     justify-content: center;
     width: 100%;
     background-color:rgb(245, 234, 193);
-    z-index: 1;
+    /* z-index: 1; */
 }
 .project_group {
     max-width: 1200px;
     display: flex;
     /* align-items: center; */
     flex-direction: column;
-    /* margin: 0 auto; */
+    margin-top: 80px;
+    margin-bottom: 120px;
 }
 .pastpresent_title {
     font-size: 50px;
@@ -200,23 +201,26 @@
   border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1) 100%);
   z-index: 1;
 }
-.wave {
+.waves_top, .waves_bottom {
     position: absolute;
-    bottom: 200;
+    top: 0;
     left: 0;
     width: 100%;
     overflow: hidden;
     line-height: 0;
-    z-index: 2;
 }
-.wave svg {
+.waves_top svg, .waves_bottom svg {
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
-    height: 67px;
+    height: 73px;
 }
-.wave .shape-fill {
-    fill: rgba(84, 75, 72, 0);
+.waves_top, .waves_bottom .shape-fill {
+    fill: #F5EFE0;
+}
+.waves_bottom {
+    transform: rotate(180deg);
+    bottom: 0;
 }
 
 /* outreach styles */
