--- a/biomedwebsite/src/styles/footer.css
+++ b/biomedwebsite/src/styles/footer.css
@@ -20,3 +20,24 @@
     justify-content: center;
     font-size: 18px;
 }
+
+.custom-shape-divider-bottom-1720571185 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1720571185 svg {
+    position: relative;
+    display: block;
+    width: calc(164% + 1.3px);
+    height: 109px;
+}
+
+.custom-shape-divider-bottom-1720571185 .shape-fill {
+    fill: #F5EFE0;
+}
