project page info

--- a/biomedwebsite/src/styles/projects.css
+++ b/biomedwebsite/src/styles/projects.css
@@ -1,6 +1,9 @@
-.current_projects{
+.projects{
     color: black;
     font-family: "Readex Pro", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .current_projects_group{
 
@@ -18,10 +21,23 @@
 }
 .proj_details_group {
     display: flex;
+    flex-direction: row;
 }
 .proj_details {
     width: 500px;
 }
+.proj_details > p {
+    line-height: 28px;
+}
+.proj_img {
+    width: 500px;
+}
 .proj_img > img{
-    width: 400px;
+    width: 500px;
+    object-fit: fill;
+    margin-left: 30px;
+}
+
+.alex_exo {
+    margin-top: 60px;
 }
