--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -106,12 +106,14 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: right; */
+    /* align-items: */
 }
 .mission1_div, .mission2_div {
     width: 500px;
     object-fit: cover;
+    width: 95%;
+    height:fit-content;
 }
 .mission1, .mission2 {
     border-radius: 20px;
