--- a/biomedwebsite/src/styles/projects.css
+++ b/biomedwebsite/src/styles/projects.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 .current_projects_group, .past_projects {
     /* width: 100%; */
@@ -22,6 +23,8 @@
 .proj_details_group {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
 }
 .proj_details {
     width: 500px;
