--- a/biomedwebsite/src/styles/footer.css
+++ b/biomedwebsite/src/styles/footer.css
@@ -2,10 +2,12 @@
     margin-top: 80px;
     display: flex;
     justify-content: center;
+    margin-bottom: 80px;
 }
 .footer_group {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .footer_titles {
     color: black;
@@ -40,4 +42,105 @@
 
 .custom-shape-divider-bottom-1720571185 .shape-fill {
     fill: #F5EFE0;
+}
+
+.makers_logo {
+    width: 250px;
+    margin-bottom: 30px;
+}
+
+.contactusbutton_footer {
+    /* align-items: center; */
+    font-size: 16px;
+    background-color: transparent;
+    border-style: solid;
+    border-color: black;
+    color: black;
+    border-width: 3px;
+    border-radius: 30px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-right: 10px;
+    transition: background-color 0.80s;
+    /* transition: color 0.80s; */
+}
+.joinusbutton_footer {
+    /* align-items: center; */
+    font-size: 16px;
+    color: white;
+    background-color: black;
+    border-style: solid;
+    border-color: white;
+    border-width: 3px;
+    border-radius: 30px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 24px;
+    padding-right: 24px;
+    transition: background-color 0.80s;
+    width: 130px;
+}
+.contactusbutton_footer:hover {
+    /* border-width: 5px; */
+    color: black;
+    background-color: white;
+    cursor: pointer;
+}
+.joinusbutton_footer:hover {
+    color: white;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+/* for phone sized */
+@media only screen and (max-width: 600px) {
+    .footer {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        display: flex;
+        justify-content: center;
+        padding: 0 20px;
+    }
+
+    .footer_group {
+        align-items: center;
+        width: 100%;
+    }
+
+    .footer_titles > h1 {
+        font-size: 24px;
+        text-align: center;
+    }
+
+    .footer_titles > p {
+        font-size: 16px;
+        text-align: center;
+        justify-content: center;
+        margin: 0 20px;
+    }
+
+    .makers_logo {
+        width: 150px;
+        margin-bottom: 20px;
+    }
+
+    .contactusbutton_footer, .joinusbutton_footer {
+        font-size: 14px;
+        padding: 10px 20px;
+        width: 90%;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .custom-shape-divider-bottom-1720571185 {
+        width: 100%;
+        height: 73px;
+    }
+
+    .custom-shape-divider-bottom-1720571185 svg {
+        width: calc(100% + 1.3px);
+        height: 73px;
+    }
 }
