--- a/biomedwebsite/src/styles/body.css
+++ b/biomedwebsite/src/styles/body.css
@@ -173,6 +173,7 @@
     color: black;
     font-family: "Readex Pro", sans-serif;
     font-weight: 800;
+    text-align: center;
 }
 /* image divs for projects below */
 .project_slide {
@@ -284,7 +285,7 @@
 /* Global settings for mobile responsiveness */
 @media only screen and (max-width: 600px) {
     .intro_body {
-        height: auto;
+        height: 400px;
         padding: 20px;
         border-width: 12px;
         background-size: cover;
@@ -307,21 +308,25 @@
     }
 
     .contact_buttons {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         gap: 10px;
-        /* width: 100%; */
+        width: 100%;
     }
 
     .contactusbutton, .joinusbutton {
         font-size: 14px;
         padding: 12px 20px;
-        margin: 0 auto;
-        /* width: 90%; */
+        /* margin: 0 auto; */
+        /* width: 100px; */
+    }
+    .joinusbutton {
+        width: 110px;
     }
 
     .mission_title {
         font-size: 32px;
+        text-align: center;
     }
 
     .mission_desc {
@@ -363,7 +368,7 @@
 
     .prosthetic_leg, .medication_manager, .exoskeleton {
         width: 100%;
-        height: auto;
+        /* height: ; */
         margin-right: 0;
         margin-bottom: 20px;
     }
