--- a/biomedwebsite/src/styles/header.css
+++ b/biomedwebsite/src/styles/header.css
@@ -1,18 +1,3 @@
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 .site_block {
   justify-content: flex;
   padding: 16px;
@@ -57,7 +42,7 @@
   font-family: Sans-serif;
   font-size: 20px;
   font-weight: bold;
-  gap: 10px;
+  gap: 20px;
 }
 
 .nav_link {
@@ -72,6 +57,7 @@
 
 /* Drop down menu */
 .drop_down_menu_contents {
+  
   text-decoration: none;
   display: none;
   flex-direction: column;
@@ -91,14 +77,19 @@
 .drop_down_menu_contents.hidden {
   display: none;
 }
-
+.drop-down-menu_contents {
+  list-style: none;
+  margin: 0;
+}
 .drop_down_menu_contents > li {
   list-style: none; /* Remove list dots */
-  margin: 10px 0; /* Add some space between items */
+  margin: 0;
+  /* margin: 10px 0;
+  margin-right: 22px; */
 }
 
 .drop_down_menu_contents li a {
-  text-align: left;
+  text-align: center;
   text-decoration: none; /* Remove underline */
   color: #333; /* Darker color for text */
   font-size: 16px; /* Increase font size */
@@ -113,6 +104,29 @@
 .drop-down-menu {
   display: none;
 }
+
+.drop_down_menu_contents {
+  list-style: none; /* Remove default list styling */
+  padding: 0;       /* Remove padding */
+  margin: 0;        /* Remove margin */
+  text-align: center; /* Center the text */
+  margin-top: 10px;
+  /* margin-left: 40px; */
+}
+
+.drop_down_menu_contents li {
+  margin: 0;        /* Remove any default margin */
+  padding: 10px;  /* Add padding for spacing */
+  padding-right: 25px;
+}
+
+.drop_down_menu_contents a {
+  text-decoration: none; /* Remove underline */
+  color: inherit;        /* Inherit the text color */
+  display: inline-block; /* Ensure links are treated as block elements */
+  width: 100%;           /* Make the link take full width of the parent */
+}
+
 
 
 
